RESOLVED FIXED 207347
Web Inspector: show JavaScript Worker terminated state as an internal property
https://bugs.webkit.org/show_bug.cgi?id=207347
Summary Web Inspector: show JavaScript Worker terminated state as an internal property
Devin Rousso
Reported 2020-02-06 12:23:15 PST
This would have helped when trying to debug <https://webkit.org/b/207346>.
Attachments
Patch (11.07 KB, patch)
2020-02-06 13:26 PST, Devin Rousso
no flags
Patch (11.62 KB, patch)
2020-02-06 13:51 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-02-06 13:26:39 PST
Blaze Burg
Comment 2 2020-02-06 13:39:32 PST
Comment on attachment 389984 [details] Patch r=me, very cool. Let's wait for EWS, worker tests seem more likely to have flake issues.
Devin Rousso
Comment 3 2020-02-06 13:51:13 PST
WebKit Commit Bot
Comment 4 2020-02-06 15:17:16 PST
Comment on attachment 389988 [details] Patch Clearing flags on attachment: 389988 Committed r255986: <https://trac.webkit.org/changeset/255986>
WebKit Commit Bot
Comment 5 2020-02-06 15:17:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-02-06 15:18:17 PST
Note You need to log in before you can comment on or make changes to this bug.