Web Inspector: show JavaScript Worker terminated state as an internal property https://bugs.webkit.org/show_bug.cgi?id=207347

Reviewed by Brian Burg.

Source/WebCore:

Test: inspector/worker/worker-create-and-terminate.html

* inspector/WebInjectedScriptHost.cpp:
(WebCore::WebInjectedScriptHost::getInternalProperties):

* workers/Worker.h:
(WebCore::Worker::wasTerminated): Added.

LayoutTests:

* inspector/worker/worker-create-and-terminate.html:
Add assertions throughout the test to check that the `terminated` value matches what the
frontend knows.


Canonical link: https://commits.webkit.org/220345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255986 268f45cc-cd09-0410-ab3c-d52691b4dbfc